# 3-arm

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ackermann_steering_controller/include/ackermann_steering_controller_parameters/: ackermann_steering_controller_parameters.hpp
ros2_ws/install/ackermann_steering_controller/share/ackermann_steering_controller/: ackermann_steering_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/admittance_controller/include/admittance_controller_parameters/: admittance_controller_parameters.hpp
ros2_ws/install/admittance_controller/share/admittance_controller/: admittance_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/bicycle_steering_controller/include/bicycle_steering_controller_parameters/: bicycle_steering_controller_parameters.hpp
ros2_ws/install/control_msgs/share/control_msgs/: local_setup.bash  local_setup.dsv  (+4 more)
ros2_ws/install/controller_manager/test/: test_controller_overriding_parameters.yaml  test_controller_spawner_with_basic_controllers.yaml  test_controller_spawner_with_type.yaml  test_ros2_control_node.yaml
ros2_ws/install/task1_pkg/share/task1_pkg/: package.sh  package.xml
ros2_ws/install/task1_pkg/share/task1_pkg/launch/: bot_launch.py  display_robot.launch.py
ros2_ws/install/task1_pkg/share/task1_pkg/urdf/: arm.urdf
ros2_ws/log/: latest_build
ros2_ws/src/task1_pkg/: setup.py
ros2_ws/src/task1_pkg/config/: bot_config.yaml
(+2073 files in other folders)
